# cvyl-prediction-dashboard

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
config/: club_branding.yml  discovered_sources.yml  sources.example.yml  team_aliases.example.yml  team_aliases.yml
modeling_lab/: 01_build_historical_matchups.py  02_generate_features.py  03_create_targets.py  04_benchmark_baselines.py  05_evaluate_models.py  06_train_interpretable_ml_baselines.py  07_confidence_engine.py  08_poisson_score_model.py  09_hybrid_prediction_layer.py  10_disagreement_analysis.py  11_game_archetypes.py  12_modeling_lab_summary.py  13_rolling_backtest.py  POWER_V4_PROMOTION_IMPLEMENTATION.md  POWER_V4_PROMOTION_PLAN.md  POWER_V5_CANDIDATE_SUMMARY.md  README.md  TEAM_NAME_ALIAS_AUDIT.md  common.py  production_integration_plan.md  run_all.py  run_blended_power_v4_experiment.py  run_hidden_tiering_experiment.py  run_matchup_calibration_analysis.py  run_opponent_adjusted_experiment.py  run_probability_spread_calibration_experiment.py  run_recency_opponent_adjusted_experiment.py  run_weekly_shadow_model_comparison.py
pages/: 1_Team_Deep_Dive.py  2_Rankings_and_Ratings.py  3_Model_Insights.py  4_Tournament_Simulator.py
tests/: test_backtesting.py  test_branding.py  test_calibration.py  test_cleaning.py  test_club_branding.py  test_competition.py  test_config.py  test_discovery.py  test_elo.py  test_explanations.py  test_historical_snapshots.py  test_model_comparison.py  test_model_comparison_power_v4.py  test_model_comparison_v3.py  test_modeling.py  (+15 more)
(+107 files in other folders)
