[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cvyl-scraper"
version = "0.1.0"
description = "Scrape CVYL lacrosse schedules and scores into a clean game-level CSV."
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "pandas>=2.2",
  "requests>=2.31",
  "streamlit>=1.36",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cvyl-scraper = "cvyl_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
